--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-align: center;
 }
 
 a {
@@ -18,14 +19,32 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: rosybrown;
 }
 
 .container {
+  width: 100%;
   margin-left: 50px;
   margin-right: 50px;
 }
 
+.navbar-nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.page-links {
+  display: flex;
+}
+
 .search-bar {
   display: flex;
+  height: 40px;
+}
+
+.sign-out-btn {
+  display: flex;
+  align-items: center;
 }
